[tool.poetry]
name = "psx-docs"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.1.2"
mkdocs-material = "^6.2.4"
mkdocs-with-pdf = "^0.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
